--- a/.github/workflows/infracost2.yml
+++ b/.github/workflows/infracost2.yml
@@ -13,8 +13,8 @@ jobs:
       contents: read
       pull-requests: write
 
-    # env:
-    #   TF_ROOT: examples/terraform-project/code
+    env:
+      TF_ROOT: ../../
       # If you're using Terraform Cloud/Enterprise and have variables or private modules stored
       # on there, specify the following to automatically retrieve the variables:
       #   INFRACOST_TERRAFORM_CLOUD_TOKEN: ${{ secrets.TFC_TOKEN }}
