--- a/.github/workflows/infracost2.yml
+++ b/.github/workflows/infracost2.yml
@@ -75,5 +75,5 @@ jobs:
             infracost comment github --path=/tmp/infracost.json \
                                      --repo=$GITHUB_REPOSITORY \
                                      --github-token=${{github.token}} \
-                                     --pull-request=${{github.event.push.number}} \
+                                     --commit 2ca7182 \
                                      --behavior=update
