--- a/.github/workflows/infracost2.yml
+++ b/.github/workflows/infracost2.yml
@@ -72,8 +72,8 @@ jobs:
       # See https://www.infracost.io/docs/features/cli_commands/#comment-on-pull-requests for other options.
       - name: Post Infracost comment
         run: |
-            infracost comment github --path=/tmp/infracost.json \
+            infracost comment github --path=infracost.json \
                                      --repo=$GITHUB_REPOSITORY \
                                      --github-token=${{github.token}} \
-                                     --commit 2ca7182 \
-                                     --behavior=update
+                                     --commit=$GITHUB_SHA \
+                                     --behavior=new
